<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="base_url">https://still-journey-5073.herokuapp.com/</string>
    <string name="app_name">Testingo</string>
    <string name="hint_Answer">Type Your Answer here</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_login">Enter Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="Confirm">CONFIRM</string>
    <string name="Registration">Registration</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_registration">Registration</string>
    <string name="enter_fname">First Name</string>
    <string name="enter_lname">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_confPass">Confirm Password</string>
    <string name="editFoto_label">Click to change foto</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="ERR_NULL_EDITTEXT">Error!!!Field Email or Password incorrect!</string>
    <string name="ERR_NULL_F_L_NANE">Error!!!Field  First Name or Last Name is empty!</string>
    <string name="ERR_INCORRECT_EMAIL">Error!!!Email is not correct!</string>
    <string name="ERR_PASS_NOT_VALID">Error!!!Field Password and Confirm Password is not equals!</string>
    <string name="INFO_REGISTRATION_SUCCESS">Registration Success</string>
    <string name="INFO_REGISTRATION_FAILURE">Registration Failure</string>
    <string name="APP_PREFERENCES">testingo.mySharedPreferences</string>
    <string name="APP_PREFERENCES_LOGIN">login</string>
    <string name="APP_PREFERENCES_PASSWORD">password</string>
    <string name="APP_PREFERENCES_FNAME">fName</string>
    <string name="APP_PREFERENCES_LNAME">LName</string>
    <string name="APP_PREFERENCES_FOTO">Foto</string>
    <string name="DIALOG_CHANGE_FOTO_TITLE">Change Photo</string>
    <string name="DIALOG_CHANGE_FOTO_MESSAGE">Do You want to change user photo?</string>
    <string name="LOG_TAG_SIGNIN">SignIN</string>
    <string name="LOG_TAG_REGISTRATION">Registration</string>
    <string name="LOG_TAG_PREFERENCES">Preferences</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="BUTTON_TEST_EVENT">CONFIRM</string>
    <string name="BUTTON_TEST_EVENT_FINISH">FINISH</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="BTN_RESULT">Back to Feed</string>
    <string name="list_empty_text">Empty</string>
    <string name="action_subsdcribe">subscribe</string>
    <string name="action_unsubsdcribe">unsubscribe</string>

</resources>
