<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignActivity">

    <ImageView
        android:layout_width="@dimen/logoWhidth"
        android:layout_height="@dimen/logoWhidth"
        android:id="@+id/imgFoto"
        android:src="@drawable/testingo"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="Roboto"
        android:textSize="36dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="@dimen/logoWhidth"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="@dimen/logoWhidth"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:id="@+id/btnConfirm"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:id="@+id/btnRegistr"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</RelativeLayout>
